# UniTS-Hub

./: .gitignore  Dockerfile  README.md  docker-compose.example.yml  pyproject.toml  requirements.txt
.agents/skills/unitshub-agent/: SKILL.md
.github/workflows/: docker-build.yml
app/: config.py  main.py  mcp.py  schemas.py
app/core/: chronos.py  interface.py  timesfm.py
app/providers/: __init__.py  base.py  chronos.py  kronos.py  registry.py  shared.py  timesfm.py
docs/: README.md  architecture-v2.md
docs/api-guide/: csv-prediction.md  parameters-explained.md
docs/getting-started/: core-concepts.md
docs/scenarios/: iot-monitoring.md  probabilistic-risk.md  retail-demand.md
scripts/: api_smoke_test.py  curl_example.sh  download_models.py  install_kronos_runtime.sh  predict_csv_example.py  predict_example.py
tests/: test_api_v2.py  test_chronos.py  test_kronos_provider.py  test_timesfm.py
